--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body {
  background-color: lightblue;
 }
@@ -5,3 +6,23 @@ body {
  padding: 15px;
  text-align: left;
   font-size: 20px;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+width: 200px;
+  background-color: lightblue;
+}
+
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #555;
+  color: white;
+}
