--- a/style.css
+++ b/style.css
@@ -1,15 +1,28 @@
-
 body {
  background-color: lightblue;
 }
 .header {
- padding: 15px;
  text-align: center;
   font-size: 20px;
 }
+.page-nav {
+	float:left;
+	width:20%;
+}
+
+.content {
+	float: right;
+	width:80%;
+}
+.sticky {
+	padding-top:200px;
+	position: fixed;
+	top: 0;
+}
+
 ul {
   list-style-type: none;
-  margin: 0;
+  margin: 0px;
   padding: 0;
 width: 200px;
   background-color: lightblue;
@@ -25,6 +38,8 @@ li a {
 li a:hover {
   background-color: #555;
   color: white;
+}
+
 table, th, td {
   border: 1px solid black;
 }
