--- a/overons.css
+++ b/overons.css
@@ -1,6 +1,40 @@
 body {
   background-color: lightblue;
 }
+.page-nav {
+	float:left;
+	width:20%;
+}
+
+.content {
+	float: right;
+	width:80%;
+}
+.sticky {
+	padding-top:200px;
+	position: fixed;
+	top: 0;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0;
+width: 200px;
+  background-color: lightblue;
+}
+
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #555;
+  color: white;
+}
 h1 {
   color: black;
   text-align: center;
