--- a/style.css
+++ b/style.css
@@ -43,3 +43,8 @@ li a:hover {
 table, th, td {
   border: 1px solid black;
 }
+@media only screen and (max-width: 375px) {
+  body {
+    background-color: red;
+  }
+}
